# jax-hpc-profiler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  notebooks.yml  python-publish.yml  tests.yml
examples/: distributed_profiling.ipynb  profiling.ipynb  profiling.py
examples/plotting/: generator.py  sample_data1.csv
examples/profiling/: function.py  test.csv
examples/profiling/test/: 1000_1_1_NCCL_float32_fcn.md
samples/: generator.py  sample_data2.csv  sample_data3.csv
src/hpc_plotter/: __init__.py  create_argparse.py  main.py  plotting.py  timer.py  utils.py
src/jax_hpc_profiler/: __init__.py  create_argparse.py  jax_timer.py  main.py  numpy_timer.py  plotting.py  timer.py  utils.py
tests/: test_plotting.py  test_timer.py  test_utils.py
timer_sample/: function.py  test.csv
timer_sample/test/: 1000_1_1_NCCL_float32_fcn.md
