[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_hpc_profiler"
version = "0.3.1"
description = "A comprehensive benchmarking and profiling tool designed for JAX in HPC environments, offering automated instrumentation, strong/weak scaling analysis, and performance visualization."
authors = [
    { name="Wassim Kabalan" }
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tabulate",
    "adjustText",
    "jax>=0.4.0",
    "jaxtyping",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["jax", "hpc", "profiling", "benchmarking", "visualization", "scaling", "performance-analysis", "gpu", "distributed-computing"]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Pick your license as you wish
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

urls = { "Homepage" = "https://github.com/ASKabalan/jax-hpc-profiler" }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]


[project.scripts]
jhp = "jax_hpc_profiler.main:main"



[tool.ruff]
line-length = 100
fix = true           # autofix issues
force-exclude = true # useful with ruff-pre-commit plugin
src = ["src"]

[tool.ruff.lint]
select = [
    'ARG001', # flake8-unused-function-arguments
    'E',      # pycodestyle-errors
    'F',      # pyflakes
    'I',      # isort
    'UP',     # pyupgrade
    'T10',    # flake8-debugger
]
ignore = [
    'E203',
    'E731',
    'E741',
    'F722', # conflicts with jaxtyping Array annotations
    "E402", # module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401"]

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
